--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/mongoose": "^5.11.97",
+    "axios": "^0.25.0",
+    "mongoose": "^6.2.1",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -15,8 +18,11 @@
   "devDependencies": {
     "@types/node": "17.0.16",
     "@types/react": "17.0.39",
+    "autoprefixer": "^10.4.2",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.19",
     "typescript": "4.5.5"
   }
 }
